# contractor

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  example.cpp  premake5.lua
contractor/: bitset.hpp  contractor.hpp  inequality.hpp  prover.hpp  prover_clever.ipp  prover_clever_lazy.ipp  prover_common.ipp  prover_simple.ipp  subsystem.hpp
test/: test_cyclic.cpp  test_prover.cpp
